<?xml version="1.0" encoding="utf-8"?>
<!-- SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<resources>
    <string name="device_title">Realme Settings</string>
    <string name="device_summary">Adjust Realme specific device settings</string>
    <string name="display_title">Display</string>
    <string name="misc_title">Misc settings</string>

    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>
    <string name="ambient_display_gestures_title">Ambient display</string>
    <string name="wake_on_gesture_title">Ambient display</string>
    <string name="ambient_display_enable">Use ambient display</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="wake_on_gesture_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>

    <!-- Tilt sensor -->
    <string name="tilt_sensor_title">Tilt sensor</string>

    <!-- Pickup sensor -->
    <string name="pickup_sensor_title">Pickup sensor</string>

    <!-- Proximity sensor -->
    <string name="proximity_sensor_title">Proximity sensor</string>

    <!-- Hand wave gesture -->
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Pick-up to wake gesture-->
    <string name="wake_gesture_title">Wake up</string>
    <string name="wake_gesture_summary">Wake up the device instead of pulsing notifications</string>

    <!-- Pocket gesture -->
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Proximity wake -->
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>

    <!-- Smart wake strings-->
    <string name="smart_wake_gesture_title">Smart Wake</string>
    <string name="smart_wake_gesture_summary">Pulse notifications on slight motion of device and wake screen when picked up</string>

    <!-- Dialog texts -->
    <string name="dialog_ok">OK</string>

    <!-- Help texts -->
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>

    <!-- CABC -->
    <string name="cabc_title">CABC Mode</string>
    <string name="cabc_dialogTitle">CABC Profiles</string>
    <string name="cabc_off">Off</string>
    <string name="cabc_normal">On</string>
    <string name="cabc_balanced">Balanced Mode</string>
    <string name="cabc_aggressive">Super power saving mode</string>
    <!-- DC dimming -->
    <string name="dc_mode_summary">DC Dimming reduces eye strain in low light conditions but may result in reduced image quality and poor color production.</string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="tile_dc_mode">DC-Dimming</string>
    <!-- srgb mode -->
    <string name="srgb_mode_summary">sRGB mode for simpler colour display</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="tile_srgb_mode">sRGB</string>
    <!-- otg mode -->
    <string name="otg_mode_summary">Enable USB-OTG power supply for external headphones and flash drives</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>
    <!-- game mode -->
    <string name="game_mode_summary">Boost Touch Sampling Rate, enables performance mode.\nUsing game mode will impact battery life significantly</string>
    <string name="game_mode_title">Game Mode</string>
    <string name="tile_game_mode">Game Mode</string>
    <string name="dnd_title">Do Not Disturb</string>
    <string name="dnd_summary">DND will be activated if Game Mode is enabled</string>
    <string name="game_mode_notif_content">Game Mode is activated</string>
    <!-- DT2W -->
    <string name="dt2w_title">Double-Tap to wake</string>
    <string name="dt2w_summary">When Double-tap to wake is enabled, you can touch the screen twice to turn it on</string>
    <!-- perf profiles -->
    <string name="perf_title">Device Performance</string>
    <string name="perf_profile_title">Performance Profile</string>
    <string name="mode_balance">Balanced</string>
    <string name="mode_battery">Power save</string>
    <string name="mode_perf">Performance</string>

    <!-- Forced Refresh rate -->
    <string name="refresh_title">Screen Refresh Rate</string>
    <string name="refresh_rate_90Forced_title">Smooth Display</string>
    <string name="refresh_rate_90Forced_summary">Force display to 90Hz which improves touch responsiveness &amp; animation quality. Increases battery usage. </string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

	  <!-- Vibration Strength -->
    <string name="vibration_strength_title">Vibration Strength</string>
    <string name="vibration_strength_low">Low</string>
    <string name="vibration_strength_medium">Medium</string>
    <string name="vibration_strength_high">High (default)</string>

    <!-- MTK Engineer Mode-->
    <string name="engineer_mode_title">MTK Engineer mode</string>
    <string name="engineer_mode_summary">Do not do anything you dont understand in here</string>

    <!-- Unsupported -->
    <string name="unsupported">Unsupported</string>

</resources>
